--- a/Components/package.json
+++ b/Components/package.json
@@ -11,7 +11,21 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "@mui/system": "^5.14.11",
+    "@mui/x-tree-view": "^6.0.0-alpha.2",
+    "bootstrap": "^5.3.0",
+    "lottie-react": "^2.4.0",
+    "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.15.0",
+    "react-visibility-sensor": "^5.1.1",
+    "recharts": "^2.8.0",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
