--- a/Components/package.json
+++ b/Components/package.json
@@ -10,8 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.11",
@@ -20,9 +18,11 @@
     "@mui/x-tree-view": "^6.0.0-alpha.2",
     "bootstrap": "^5.3.0",
     "lottie-react": "^2.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.15.0",
+    "react-router-dom": "^6.17.0",
     "react-visibility-sensor": "^5.1.1",
     "recharts": "^2.8.0",
     "styled-components": "^6.0.8"
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
